--- a/action.yml
+++ b/action.yml
@@ -18,7 +18,7 @@ inputs:
     default: "true"
 runs:
   env:
-    - _COVDIR: $GITHUB_ACTION_PATH/coverage_reports
+    _COVDIR: $GITHUB_ACTION_PATH/coverage_reports
   using: "composite"
   steps:
     - name: Collect Coverage Files
