specify the id in the test workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,8 @@ jobs:
 
     - name: Run the action
       uses: ./
+      with:
+        id: ${{ matrix.os.name }} - ${{ matrix.python.name }}
 
   check:
     name: Check
